upgrade minimum required Java version to 11