@@ -5,7 +5,6 @@ import at.wrk.coceso.data.AuthenticatedUser;
 import at.wrk.coceso.entity.User;
 import at.wrk.coceso.entity.enums.Authority;
 import at.wrk.coceso.service.UserService;
-import com.google.common.collect.ImmutableSet;
 import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -24,8 +23,7 @@ import java.net.HttpURLConnection;
 import java.util.Base64;
 import java.util.Optional;
 import java.util.Set;
-
-import static java.util.stream.Collectors.toSet;
+import java.util.stream.Collectors;
 
 @Component
 class BasicAuthenticationProvider extends AbstractUserDetailsAuthenticationProvider {
@@ -44,9 +42,10 @@ class BasicAuthenticationProvider extends AbstractUserDetailsAuthenticationProvi
     }
 
     @Override
-    protected void additionalAuthenticationChecks(UserDetails userDetails, UsernamePasswordAuthenticationToken authenticationToken) throws AuthenticationException {
-      AuthenticatedUser user = (AuthenticatedUser) userDetails;
-
+    protected void additionalAuthenticationChecks(
+            final UserDetails userDetails,
+            final UsernamePasswordAuthenticationToken authenticationToken) throws AuthenticationException {
+        AuthenticatedUser user = (AuthenticatedUser) userDetails;
 
         String username = user.getUsername();
         String password = (String) authenticationToken.getCredentials();
@@ -107,7 +106,9 @@ class BasicAuthenticationProvider extends AbstractUserDetailsAuthenticationProvi
     }
 
     @Override
-    protected AuthenticatedUser retrieveUser(String username, UsernamePasswordAuthenticationToken userPasswordAuthenticationToken) throws AuthenticationException {
+    protected AuthenticatedUser retrieveUser(
+            final String username,
+            final UsernamePasswordAuthenticationToken userPasswordAuthenticationToken) throws AuthenticationException {
         User user = userService.getByUsername(username);
         if (user == null) {
             LOG.info("[failed] {}: User not found", username);
@@ -115,10 +116,10 @@ class BasicAuthenticationProvider extends AbstractUserDetailsAuthenticationProvi
         }
 
         Set<Authority> authorities = Optional.ofNullable(user.getInternalAuthorities())
-                .orElse(ImmutableSet.of())
+                .orElse(Set.of())
                 .stream()
                 .flatMap(authority -> authority.getAuthorities().stream())
-                .collect(toSet());
+                .collect(Collectors.toUnmodifiableSet());
         String displayName = user.getFirstname() + " " + user.getLastname();
         return new AuthenticatedUser(user.getId(), user.getUsername(), displayName, user.getPassword(), user.isAllowLogin(), authorities);
     }
