@@ -4,7 +4,6 @@ import at.wrk.coceso.entity.Incident;
 import at.wrk.coceso.entity.Unit;
 import at.wrk.coceso.entity.enums.IncidentType;
 import at.wrk.coceso.entity.enums.UnitState;
-import com.google.common.collect.ImmutableSet;
 import org.springframework.stereotype.Component;
 
 import java.util.Map;
@@ -13,14 +12,14 @@ import java.util.Set;
 
 @Component
 public class AvailableForDispatchingCalculator {
-    private static final Set<IncidentType> BUSY_INCIDENT_TYPES = ImmutableSet.of(
+    private static final Set<IncidentType> BUSY_INCIDENT_TYPES = Set.of(
             IncidentType.Task,
             IncidentType.Transport,
             IncidentType.Treatment,
             IncidentType.Standby);
 
     boolean isAvailableForDispatching(final Unit unit) {
-        Set<Incident> assignedIncidents = Optional.ofNullable(unit.getIncidents()).map(Map::keySet).orElse(ImmutableSet.of());
+        Set<Incident> assignedIncidents = Optional.ofNullable(unit.getIncidents()).map(Map::keySet).orElse(Set.of());
         return unit.isPortable() && unit.getState() == UnitState.EB && hasNoBusyIncidentsAssigned(assignedIncidents);
     }
 
