@@ -2,8 +2,9 @@ package at.wrk.coceso.plugin.geobroker.utils;
 
 import at.wrk.coceso.plugin.geobroker.contract.broker.GeoBrokerUnit;
 import at.wrk.coceso.plugin.geobroker.contract.broker.OneTimeAction;
-import com.google.common.collect.ImmutableList;
 import org.apache.commons.lang3.RandomUtils;
+
+import java.util.List;
 
 import static at.wrk.coceso.plugin.geobroker.utils.GeoBrokerPoints.randomPoint;
 import static at.wrk.coceso.plugin.geobroker.utils.Strings.randomString;
@@ -21,12 +22,12 @@ public final class GeoBrokerUnits {
                 externalUnitId,
                 randomString(),
                 randomString(),
-                ImmutableList.of(randomString()),
-                ImmutableList.of(randomString()),
+                List.of(randomString()),
+                List.of(randomString()),
                 randomPoint(),
                 randomPoint(),
                 RandomUtils.nextBoolean(),
-                ImmutableList.of(
+                List.of(
                         new OneTimeAction("testingAction", "https://invalid.server.local/foobar", null, null)
                 ));
     }
