@@ -3,8 +3,6 @@ package at.wrk.coceso.niu.parser;
 import at.wrk.coceso.importer.ImportException;
 import at.wrk.coceso.niu.data.ExternalUser;
 import at.wrk.coceso.niu.data.ExternalUserId;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
 import org.apache.commons.csv.CSVFormat;
 import org.apache.commons.csv.CSVParser;
 import org.apache.commons.csv.CSVRecord;
@@ -19,6 +17,7 @@ import java.util.Collection;
 import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
 
 @Component
 public class NiuExternalUserParser implements ExternalUserParser {
@@ -29,7 +28,7 @@ public class NiuExternalUserParser implements ExternalUserParser {
     private static final String LASTNAME = "Nachname";
     private static final String FIRSTNAME = "Vorname";
     private static final String PERSONNELID = "DNr.";
-    private static final ImmutableSet<String> TELEPHONE_FIELDS = ImmutableSet.of(
+    private static final Set<String> TELEPHONE_FIELDS = Set.of(
             "Telefon geschäftlich",
             "Telefon privat",
             "Telefon WRK",
@@ -56,11 +55,10 @@ public class NiuExternalUserParser implements ExternalUserParser {
             throw new ImportException("Could not parse users CSV file", e);
         }
 
-        return ImmutableList.copyOf(records)
-                .stream()
+        return StreamSupport.stream(records.spliterator(), false)
                 .map(NiuExternalUserParser::getExternalUserFromCsvRecord)
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .collect(Collectors.toUnmodifiableList());
     }
 
     private static ExternalUser getExternalUserFromCsvRecord(final CSVRecord record) throws ImportException {
